tests/ifcc-test-output/testfiles-3_01_01_var_name_invalid/gcc-compile.txt
input.c: In function ‘main’:
input.c:2:9: error: invalid suffix "BadName" on integer constant
    2 |     int 1BadName;
      |         ^~~~~~~~
input.c:2:9: error: expected identifier or ‘(’ before numeric constant

return code: 1
